<resources>
    <string name="app_name">JShelper</string>

    <string name="maintext">당신이 사는 지역은\n어디입니까?</string>
    
    <string name="btntx1">경기도</string>
    <string name="tx1help">경기지역은 조선시대부터 한양을 포함한 중심지로 통북어를 구이적으로 꼭 올렸다. 북어를 다산과 풍요의 상징으로 여기며 중요시했기 때문이다. 또 녹두를 갈아 배추를 고명으로 넣고 만드는 녹두전을 부침전으로 올리기도 했다. 생선은 다른 지역에 비해 적게 올린다. 예로부터 생선가운데 으뜸이 굴비를 올렸으나 요즘은 참조기나 가자미를 올리기도 한다. [ 출처:네이버 ]</string>
    <string name="btntx2">강원도</string>
    <string name="tx2help">대부분이 산간지방인 강원지역은 나물과 감자, 고구마를 이용한 음식이 많다. 특히 메밀꽃으로 유명한 평창은 차례상에 반드시 메밀전을 올리며, 감자전이나 무와 배추로 만든 적을 올리기도 한다. 버섯류도 부침이나 전의 단골재료다. 특히 송이 같은 귀한 버섯은 소적으로 구워내 제사음식으로 올린다. 어물이 많이 나는 동해와 강릉지역의 차례상에는 명태포와 생선전이 빠지지 않는다. [ 출처:네이버]</string>
    <string name="btntx3">경상도</string>
    <string name="tx3help">경북지역, 특히 대구 쪽은 적으로 참상어살을 구워서 올린다. 경남지역은 바다를 옆에 끼고 있어서 어물을 제사상에 많이 올린다. 조기 뿐 아니라 민어, 가자미, 방어, 도미 등 여러 종류의 생선을 올리고 조개 등의 어패류를 올리는 지역도 있다. 안동에서 유명한 안동식혜는 그 지역의 차례상에 빠지지 않고 오르는 제물이다. 삭히지 않은 엿기름과 고춧가루로 만든 안동식혜는 소화불량에도 좋은 것으로 알려져 있다. [ 출처:네이버 ]</string>
    <string name="btntx4">전라도</string>
    <string name="tx4help">전라도는 제사상에 홍어를 올리는 것이 특징이다. 잔치 때 절대 빠지지 않는 음식이 홍어이다보니 제사상에도 반드시 오르는 제물 가운데 하나다. 먹을거리가 풍성하고 음식문화도 발달한 지역이어서 제사상에는 다양한 음식이 오른다. 병어나 낙지, 그리고 남도 쪽에서는 꼬막 같은 어패류도 단골로 오르는 제물이다. [ 출처:네이버]</string>
    <string name="btntx5">제주도</string>
    <string name="tx5help">옥돔처럼 제주도에서만 잡히는 생선이나 전복 등을 차례상에 올린다. 최근엔 바나나, 파인애플 등 제주도에서 재배하는 다양한 과일들이 상에 올라온다. [ 출처:네이버 ]</string>
    <string name="btntx6">충청도</string>
    <string name="tx6help">삼도가 인접한 충청도는 다양한 제물을 올리기로 유명하다. 경북에 인접한 지역에서는 건어물인 대구포, 상어포, 오징어포, 가오리포, 피문어 등을 올리고, 호남과 인접한 지역에서는 말린 홍어, 병어, 가자미, 낙지, 서대묵 등을 올린다. 바다가 인접하지 않은 내륙지역에서는 배추전, 무전 등 전과 부침류를 많이 올린다. [ 출처:네이버 ]</string>
    <string name="btntx7">현대식</string>


    <string name="warning">준비중</string>
</resources>
